@@ -256,5 +256,7 @@ vendor/unitedlinux/oracleasm.init
 vendor/unitedlinux/oracleasm-2.4.19-4GB-304.spec
 vendor/unitedlinux/oracleasm-2.4.19-4GB-SMP-304.spec
 vendor/unitedlinux/oracleasm-2.4.19-64GB-SMP-304.spec
+vendor/unitedlinux/oracleasm-2.4.21-107.spec
 vendor/unitedlinux/oracleasm-2.4.21-111.spec
+vendor/unitedlinux/oracleasm-2.4.21-138.spec
 ])
