@@ -7,6 +7,8 @@ DIST_FILES =					\
 	oracleasm-2.4.19-4GB-304.spec.in	\
 	oracleasm-2.4.19-4GB-SMP-304.spec.in	\
 	oracleasm-2.4.19-64GB-SMP-304.spec.in	\
-	oracleasm-2.4.21-111.spec.in
+	oracleasm-2.4.21-107.spec.in		\
+	oracleasm-2.4.21-111.spec.in		\
+	oracleasm-2.4.21-138.spec.in
 
 include $(TOPDIR)/Postamble.make
