@@ -1,5 +1,15 @@
 
-2003-11-19	Joel Becker <joel.becker@oracle.com>
+2003-11-20	Joel Becker <joel.becker@oracle.com>
+
+	* vendor/unitedlinux/oracleasm-2.4.21-111.spec.in: Added
+		non-x86_64 targets.
+	* vendor/unitedlinux/oracleasm-2.4.21-{107,138}.spec.in: Added.
+	* vendor/unitedlinux/Makefile: Added the new specfiles.
+	* configure.in: Added the new specfiles.
+	* vendor/unitedlinux/oracleasm.init.in: Handle SP3 kernel
+		unames.
+
+2003-11-20	Joel Becker <joel.becker@oracle.com>
 
 	* Makefile: deflt, not dflt.
 	* vendor/unitedlinux/oracleasm-2.4.19-4GB-304.spec.in: deflt,
